# ci-test-2

./: .gitignore  CMakeLists.txt  Dockerfile  Project.toml  README.md
.github/workflows/: build-and-release.yml  ci.yml
include/kafka/: AdminClient.h  Error.h  KafkaClient.h  KafkaProducer.h
src/: CMakeLists.txt  Librdkafka.jl  cmake_install.cmake  main.cpp  simple_consumer.jl  simple_consumer_without_commit.jl  simple_producer.jl  test_file_producer.jl
